@@ -787,6 +787,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Expand the thumburl to an absolute url to make it consistent with url and 
   descriptionurl 
 * (bug 20233) ApiLogin::execute() doesn't handle LoginForm :: RESET_PASS
+* (bug 22061) API: add prop=headitems to action=parse
 
 === Languages updated in 1.16 ===
 
